--- a/src/themes/vue.css
+++ b/src/themes/vue.css
@@ -47,10 +47,11 @@ body {
 }
 
 .app-sub-sidebar {
-  .section-link {
+  li {
     &::before {
       content: '-';
       padding-right: 4px;
+      float: left;
     }
   }
 }
